# dg_gstreamer_plugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  gstdgfilternv.cpp  gstdgfilternv.h  install.sh  installDependencies.sh
.github/workflows/: merge.yml
dgaccelerator/: CMakeLists.txt  Makefile  dgaccelerator_lib.cpp  dgaccelerator_lib.h  gstdgaccelerator.cpp  gstdgaccelerator.h  nvdefines.h
dgaccelerator/Docs/: Doxyfile
dgaccelerator/dgaccelerator_lib/: Makefile  dgaccelerator_lib.cpp  dgaccelerator_lib.h
dgaccelerator/include/Utilities/: DGTrace.h  dg_device_types.h  dg_json_helpers.h  dg_model_parameters_client.inc  dg_raii_helpers.h  dg_tensor_structs.h  nameof.hpp
dgfilternv_Async/: Makefile  gstdgfilternv.cpp  gstdgfilternv.h
dgfilternv_Async/dgfilternv_lib/: Makefile  dgfilternv_lib.cpp  dgfilternv_lib.h
dgfilternv_Async/include/Utilities/: TypeList.h  dg_math_utilities.h  dg_socket.h  dg_time_utilities.h
dgfilternv_Async/include/client/: dg_client.cpp
dgfilternv_Sequential/: gstdgfilternv.cpp
dgfilternv_Sequential/dgfilternv_lib/: Makefile  dgfilternv_lib.cpp  dgfilternv_lib.h
dgfilternv_Sequential/include/Utilities/: DGErrorHandling.h  DGLog.h  DGType.h  dg_cmdline_parser.h  dg_com_decl.h  dg_file_utilities.h  dg_model_parameters.h  dg_version.h  json.hpp
dgfilternv_Sequential/include/client/: dg_model_api.cpp
dgfilternv_lib/: Makefile  dgfilternv_lib.cpp  dgfilternv_lib.h
include/DglibInterface/: dg_model_api.h
include/Utilities/: dg_client_structs.h  dg_tracing_facility.h
include/client/: dg_client.h
tests/: dgaccelerator_test.cpp
